# RN_appAndCpp

./: index.js  package-lock.json  package.json
__tests__/: App.test.tsx
android/app/: build.gradle
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/app/src/main/java/com/app_exp/: AppPackage.java  ImageProcessorModule.java  MainApplication.java
ios/app_exp.xcodeproj/: project.pbxproj
ios/cpp/: RCTImageProcessorModule.h  RCTImageProcessorModule.m  hello.cpp  hello.h
src_app/: App.tsx
src_app/android/: ImageProcessor.js
src_app/ios/: ImageProcessor_ios.ts
